use advanced tensorflow example to save and graph model checkpoints

--- a/thesis/elena-test/pyproject.toml
+++ b/thesis/elena-test/pyproject.toml
@@ -3,34 +3,51 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "elena-test"
+name = "tensorflow_fexample"
 version = "1.0.0"
-description = ""
+description = "Federated Learning with Tensorflow/Keras and Flower (Advanced Example)"
 license = "Apache-2.0"
 dependencies = [
-    "flwr[simulation]>=1.11.1",
-    "flwr-datasets[vision]>=0.3.0",
-    "tensorflow>=2.11.1",
+    "flwr[simulation]>=1.15.2",
+    "flwr-datasets[vision]>=0.5.0",
+    "tensorflow-cpu>=2.9.1, != 2.11.1 ; platform_machine == \"x86_64\"",
+    "tensorflow-macos>=2.9.1, != 2.11.1 ; sys_platform == \"darwin\" and platform_machine == \"arm64\"",
+    "wandb==0.17.8",
 ]
-
 [tool.hatch.build.targets.wheel]
 packages = ["."]
 
 [tool.flwr.app]
-publisher = "elenapleshan"
+publisher = "flwrlabs"
 
 [tool.flwr.app.components]
-serverapp = "elena_test.server_app:app"
-clientapp = "elena_test.client_app:app"
+serverapp = "tf_federation.server_app:app"
+clientapp = "tf_federation.client_app:app"
 
 [tool.flwr.app.config]
-num-server-rounds = 3
+num-server-rounds = 5
 local-epochs = 1
 batch-size = 32
-verbose = false
+fraction-fit = 0.25
+fraction-evaluate = 0.5
+use-wandb = true
 
 [tool.flwr.federations]
-default = "local-simulation"
+default = "local-sim"
 
-[tool.flwr.federations.local-simulation]
-options.num-supernodes = 10
+[tool.flwr.federations.local-sim]
+options.num-supernodes = 6
+options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
+options.backend.client-resources.num-gpus = 0.0 # ratio of VRAM a ClientApp has access to
+
+[tool.flwr.federations.local-sim-gpu]
+options.num-supernodes = 6
+options.backend.client-resources.num-cpus = 2
+options.backend.client-resources.num-gpus = 0.25
+
+[tool.flwr.federations.local-deployment]
+address = "127.0.0.1:9093"
+insecure = true
+
+[tool.flwr.custom_params]
+dataset = "zalando-datasets/fashion_mnist"
