--- a/thesis/elena-test/pyproject.toml
+++ b/thesis/elena-test/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "tensorflow_fexample"
+name = "tf_embedded_federation"
 version = "1.0.0"
 description = "Federated Learning with Tensorflow/Keras and Flower (Advanced Example)"
 license = "Apache-2.0"
@@ -12,6 +12,9 @@ dependencies = [
     "flwr-datasets[vision]>=0.5.0",
     "tensorflow-cpu>=2.9.1, != 2.11.1 ; platform_machine == \"x86_64\"",
     "tensorflow-macos>=2.9.1, != 2.11.1 ; sys_platform == \"darwin\" and platform_machine == \"arm64\"",
+    "keras==3.8.0",
+    "tensorflow==2.16.1",
+    "tomli==2.2.1",
     "wandb==0.17.8",
 ]
 [tool.hatch.build.targets.wheel]
@@ -31,6 +34,9 @@ batch-size = 32
 fraction-fit = 0.25
 fraction-evaluate = 0.5
 use-wandb = true
+project-name = "flower-embedded-fed"
+run-identifier = "development"
+base-weights-path = ""
 
 [tool.flwr.federations]
 default = "local-sim"
