add wanDB for client

--- a/thesis/federated-learning/pyproject.toml
+++ b/thesis/federated-learning/pyproject.toml
@@ -33,7 +33,7 @@ local-epochs = 1
 batch-size = 32
 fraction-fit = 0.25
 fraction-evaluate = 0.5
-use-wandb = false
+use-wandb = true
 project-name = "flower-embedded-fed"
 run-identifier = "development"
 base-weights-path = ""
