--- a/thesis/federated-learning/pyproject.toml
+++ b/thesis/federated-learning/pyproject.toml
@@ -42,12 +42,12 @@ base-weights-path = ""
 default = "local-sim"
 
 [tool.flwr.federations.local-sim]
-options.num-supernodes = 2
+options.num-supernodes = 20
 options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
 options.backend.client-resources.num-gpus = 0.0 # ratio of VRAM a ClientApp has access to
 
 [tool.flwr.federations.local-sim-gpu]
-options.num-supernodes = 2
+options.num-supernodes = 8
 options.backend.client-resources.num-cpus = 2
 options.backend.client-resources.num-gpus = 0.25
 
@@ -56,4 +56,4 @@ address = "127.0.0.1:9093"
 insecure = true
 
 [tool.flwr.custom_params]
-dataset = "ylecun/mnist"
+dataset = "uoft-cs/cifar10"
