add results of embedded runs for zalando and cifar datasets

--- a/thesis/federated-learning/pyproject.toml
+++ b/thesis/federated-learning/pyproject.toml
@@ -35,7 +35,7 @@ fraction-fit = 0.25
 fraction-evaluate = 0.5
 use-wandb = true
 project-name = "flower-embedded-fed"
-flavour = "development"
+flavour = "deploy"
 base-weights-path = ""
 
 [tool.flwr.federations]
